--- a/examples/mimic_iii/config.yml
+++ b/examples/mimic_iii/config.yml
@@ -1,6 +1,8 @@
 Spacy:
   processors: ["sentence", "tokenize", "pos", "ner", "umls_link"]
   lang: "en_ner_bionlp13cg_md"
-  
+
 Negation:
-  negation_rules_path": "negex_triggers.txt"
+  negation_rules_path: "negex_triggers.txt"
+  pre_negation_rules: []
+  post_negation_rules: []
