--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,3 +90,36 @@ jobs:
     - name: Upload coverage
       run: |
         codecov
+
+  docs:
+    needs: build
+    runs-on: ubuntu-latest
+    env:
+      python-version: 3.7
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ env.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.python-version }}
+      - name: Cache pip
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+            ${{ runner.os }}-
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --progress-bar off --upgrade pip
+          sudo apt-get install pandoc
+          pip install --progress-bar off -r docs/requirements.txt
+
+      - name: Build Docs
+        run: |
+          cd docs
+          sphinx-build -W -b html -d _build/doctrees . _build/html
+          sphinx-build -W -b spelling -d _build/doctrees . _build/spelling
+          cd ..
