--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -115,6 +115,7 @@ jobs:
         run: |
           python -m pip install --progress-bar off --upgrade pip
           sudo apt-get install pandoc
+          pip install --progress-bar off -r requirements.txt
           pip install --progress-bar off -r docs/requirements.txt
 
       - name: Build Docs
