--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,6 +117,7 @@ jobs:
           sudo apt-get install pandoc
           pip install --progress-bar off -r requirements.txt
           pip install --progress-bar off -r docs/requirements.txt
+          pip install --progress-bar off .
 
       - name: Build Docs
         run: |
