--- a/examples/mimic_iii/config.yml
+++ b/examples/mimic_iii/config.yml
@@ -1,5 +1,7 @@
 Spacy:
   processors: ["sentence", "tokenize", "pos", "ner", "umls_link"]
+  medical_onto_type: "ftx.medical.clinical_ontology.MedicalEntityMention"
+  umls_onto_type: "ftx.medical.clinical_ontology.UMLSConceptLink"
   lang: "en_ner_bionlp13cg_md"
 
 Negation:
