mapping config file added

--- a/examples/mimic_iii/mapping_config.json
+++ b/examples/mimic_iii/mapping_config.json
@@ -68,7 +68,7 @@
         "tag": "org.apache.ctakes.typesystem.type.textsem.EntityMention",
         "attributes": {
             "entity": "ner_type",
-            "umls": 
+            "umls": {}
         }
 
     },
