--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-forte
+forte~=0.1.2
 sortedcontainers==2.1.0
 numpy>=1.16
 jsonpickle==1.4
@@ -16,3 +16,13 @@ importlib-resources==5.1.4;python_version<'3.7'
 fastapi==0.65.2
 uvicorn==0.14.0
 jinja2<=3.0.3
+
+# Try newer version of pytorch wheel.
+# https://download.pytorch.org/whl/cpu/torch-1.3.0%2Bcpu-cp37-cp37m-linux_x86_64.whl
+torch>=1.6.0
+
+# Wrappers
+git+https://git@github.com/asyml/forte-wrappers.git#egg=forte.huggingface&subdirectory=src/huggingface
+dataclasses~=0.8
+setuptools~=57.0.0
+transformers~=4.2.2
