--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -19,7 +19,8 @@ typing>=3.7.4; python_version < '3.5'
 typing-inspect>=0.6.0
 
 # PyTorch installation for ReadTheDocs
-https://download.pytorch.org/whl/cpu/torch-1.1.0-cp37-cp37m-linux_x86_64.whl
+# https://download.pytorch.org/whl/cpu/torch-1.1.0-cp37-cp37m-linux_x86_64.whl
+torch==1.11.0
 
 # faiss
 faiss-cpu>=1.6.1
