--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,9 +93,10 @@ jobs:
       run: |
         coverage run -m pytest tests/
 #        coverage run --append -m pytest --doctest-modules forte_medical/
-    - name: Upload coverage
-      run: |
-        codecov
+
+    - uses: codecov/codecov-action@v2
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
 
   docs:
     needs: build
