--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,22 +62,22 @@ jobs:
 
     - name: Format check with Black
       run: |
-        black --line-length 80 --check forte_medical/ tests/
+        black --line-length 80 --check fortex/ tests/
 
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 forte_medical/ examples/ tests/ ftx/ --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 fortex/ examples/ tests/ ftx/ --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 forte_medical/ examples/ ftx/ tests/ --ignore E203,W503 --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 fortex/ examples/ ftx/ tests/ --ignore E203,W503 --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Lint with pylint
       run: |
-        pylint forte_medical/ tests/
+        pylint fortex/ tests/
 
     - name: Lint main code with mypy when torch version is not 1.5.0 and python is 3.9
       run: |
-        if [[ ${{ matrix.torch-version }} != "1.5.0" && ${{ matrix.python-version }} == "3.9" ]]; then mypy forte_medical/ tests/ ; fi
+        if [[ ${{ matrix.torch-version }} != "1.5.0" && ${{ matrix.python-version }} == "3.9" ]]; then mypy fortex/ tests/ ; fi
 
     - name: Install requirements for tests
       run: |
@@ -92,7 +92,7 @@ jobs:
     - name: Test with pytest and run coverage
       run: |
         coverage run -m pytest tests/
-#        coverage run --append -m pytest --doctest-modules forte_medical/
+#        coverage run --append -m pytest --doctest-modules fortex/
 
     - uses: codecov/codecov-action@v2
       with:
