remove unnecessary configs

--- a/examples/icd_code_prediction/config.yml
+++ b/examples/icd_code_prediction/config.yml
@@ -1,8 +1,5 @@
 Spacy:
-  processors: ["sentence", "tokenize", "pos", "ner", "umls_link"]
-  medical_onto_type: "ftx.medical.clinical_ontology.MedicalEntityMention"
-  umls_onto_type: "ftx.medical.clinical_ontology.UMLSConceptLink"
-  lang: "en_ner_bionlp13cg_md"
+  processors: ["sentence", "tokenize"]
 
 Negation:
   negation_rules_path: ""
