--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,5 @@ git+https://git@github.com/asyml/forte-wrappers.git#egg=forte.huggingface&subdir
 dataclasses~=0.8; python_version < '3.7'
 setuptools~=57.0.0
 transformers~=4.2.2
+# neuralcoref (build from source) for CoreferenceProcessor
+git+https://git@github.com/huggingface/neuralcoref.git@4.0.0#egg=neuralcoref
