put installation of neuralcoref in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,6 +89,10 @@ jobs:
         cd forte-wrappers
         pip install src/spacy
 
+    - name: Install NeuralCoref
+      run: |
+        git install git+https://git@github.com/huggingface/neuralcoref.git@4.0.0#egg=neuralcoref
+
     - name: Test with pytest and run coverage
       run: |
         coverage run -m pytest tests/
