--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,8 @@ setuptools~=57.0.0
 transformers~=4.2.2
 
 spacy>=2.3.0, <=2.3.5
+cython>=0.25
+pytest
 # It is annoying that if we install neuralcoref and spacy at the same
 # time, neuralcoref will throw "Cython failed" during building.
 # Therefore, we must install neuralcoref after spacy is installed.
