change the stave db path

--- a/examples/search_engine_to_stave/clinical_config.yml
+++ b/examples/search_engine_to_stave/clinical_config.yml
@@ -7,7 +7,7 @@ BERTTokenizer:
   model_path: "resources/NCBI-disease"
 
 Stave:
-  stave_db_path: "C://Users//Leo//.stave//db.sqlite3"
+  stave_db_path: "$Home//.stave//db.sqlite3"
   url: "http://localhost:8899"
   username: admin
   pw: admin
