--- a/examples/label_example/stave_config.yml
+++ b/examples/label_example/stave_config.yml
@@ -1,5 +1,5 @@
 Stave:
-  stave_db_path: "C://Users//Leo//.stave//db.sqlite3"
+  stave_db_path: "$HOME//.stave//db.sqlite3"
   url: "http://localhost:8899"
   username: admin
   pw: admin
