--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,6 +82,7 @@ jobs:
     - name: Install requirements for tests
       run: |
         pip install --use-feature=2020-resolver --progress-bar off .[test]
+        pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.0/en_core_sci_sm-0.5.0.tar.gz  --progress-bar off .[test]
 
     - name: Install Forte-wrappers-spacy
       run: |        
