--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,19 +16,34 @@ jobs:
         python-version: [ 3.6, 3.7 ]
         torch-version: [ 1.5.0, 1.6.0 ]
         tensorflow-version: [ 1.15.0 ]
+        test-file-conflict: [ tests/forte_medical/processors/scispacy_processor_test.py ]
+        test-file: [ tests/forte_medical/processors/icd_coding_processor_test.py,
+                     tests/forte_medical/processors/negation_context_analysis_test.py ]
         include:
           - python-version: 3.8
             torch-version: 1.7.1
             tensorflow-version: 2.2.0
+            test-file-conflict: [ tests/forte_medical/processors/scispacy_processor_test.py ]
+            test-file: [ tests/forte_medical/processors/icd_coding_processor_test.py,
+                     tests/forte_medical/processors/negation_context_analysis_test.py ]
           - python-version: 3.8
             torch-version: 1.8.1
             tensorflow-version: 2.2.0
+            test-file-conflict: [ tests/forte_medical/processors/scispacy_processor_test.py ]
+            test-file: [ tests/forte_medical/processors/icd_coding_processor_test.py,
+                     tests/forte_medical/processors/negation_context_analysis_test.py ]
           - python-version: 3.9
             torch-version: 1.7.1
             tensorflow-version: 2.5.0
+            test-file-conflict: [ tests/forte_medical/processors/scispacy_processor_test.py ]
+            test-file: [ tests/forte_medical/processors/icd_coding_processor_test.py,
+                     tests/forte_medical/processors/negation_context_analysis_test.py ]
           - python-version: 3.9
             torch-version: 1.8.1
             tensorflow-version: 2.5.0
+            test-file-conflict: [ tests/forte_medical/processors/scispacy_processor_test.py ]
+            test-file: [ tests/forte_medical/processors/icd_coding_processor_test.py,
+                     tests/forte_medical/processors/negation_context_analysis_test.py ]
     steps:
     - uses: actions/checkout@v2
 
@@ -82,7 +97,6 @@ jobs:
     - name: Install requirements for tests
       run: |
         pip install --use-feature=2020-resolver --progress-bar off .[test]
-        pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.0/en_core_sci_sm-0.5.0.tar.gz  --progress-bar off .[test]
 
     - name: Install Forte-wrappers-spacy
       run: |        
@@ -92,9 +106,18 @@ jobs:
 
     - name: Test with pytest and run coverage
       run: |
-        coverage run -m pytest tests/
+        coverage run -m pytest ${{ matrix.test-file }}
 #        coverage run --append -m pytest --doctest-modules fortex/
 
+    - name: Reset requirements for conflict files
+      run: |
+        pip uninstall -y forte.spacy spacy scispacy
+        pip install --use-feature=2020-resolver --progress-bar off .[test_scispacy]
+
+    - name: Test with pytest and run coverage for conflict files
+      run: |
+        if [[ ${{ matrix.python-version }} == "3.6" || ${{ matrix.python-version }} == "3.7" ]]; then coverage run -m pytest ${{ matrix.test-file-conflict }} ; fi
+    
     - uses: codecov/codecov-action@v2
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
