change main.yml format

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,19 +16,11 @@ jobs:
         python-version: [ 3.6, 3.7 ]
         torch-version: [ 1.5.0, 1.6.0 ]
         tensorflow-version: [ 1.15.0 ]
-        include:
-          - python-version: 3.8
-            torch-version: 1.7.1
-            tensorflow-version: 2.2.0
-          - python-version: 3.8
-            torch-version: 1.8.1
-            tensorflow-version: 2.2.0
-          - python-version: 3.9
-            torch-version: 1.7.1
-            tensorflow-version: 2.5.0
-          - python-version: 3.9
-            torch-version: 1.8.1
-            tensorflow-version: 2.5.0
+        test-details:
+          - { dep: forte-wrapper, testfile: tests/fortex/health/processors/icd_coding_processor_test.py }
+          - { dep: forte-wrapper, testfile: tests/fortex/health/processors/negation_context_analysis_test.py }
+          - { dep: scispacy, testfile: tests/fortex/health/processors/scispacy_processor_test.py }
+          - { testfile: tests/fortex/health/readers/mimic3_note_reader_test.py }
     steps:
     - uses: actions/checkout@v2
 
@@ -84,25 +76,23 @@ jobs:
         pip install --use-feature=2020-resolver --progress-bar off .[test]
 
     - name: Install Forte-wrappers-spacy
+      if: ${{ matrix.test-details.dep == 'forte-wrapper' ||
+              contains(matrix.test-details.dep, 'forte-wrapper') }}
       run: |        
         git clone https://github.com/asyml/forte-wrappers.git
         cd forte-wrappers
         pip install src/spacy
 
-    - name: Test with pytest and run coverage
-      run: |
-        coverage run -m pytest tests/fortex/health/processors/icd_coding_processor_test.py
-        coverage run -m pytest tests/fortex/health/processors/negation_context_analysis_test.py
-#        coverage run --append -m pytest --doctest-modules fortex/
-
-    - name: Reset requirements for conflict files
-      run: |
-        pip uninstall -y forte.spacy spacy scispacy
+    - name: Install scispacy
+      if: ${{ matrix.test-details.dep == 'scispacy' ||
+              contains(matrix.test-details.dep, 'scispacy') }}
+      run: |        
         pip install --use-feature=2020-resolver --progress-bar off .[test_scispacy]
 
-    - name: Test with pytest and run coverage for conflict files
+    - name: Test with pytest and run coverage
       run: |
-        coverage run -m pytest tests/fortex/health/processors/scispacy_processor_test.py
+        coverage run -m pytest ${{ matrix.test-details.testfile}}
+#        coverage run --append -m pytest --doctest-modules fortex/
     
     - uses: codecov/codecov-action@v2
       with:
