--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,34 +26,34 @@ jobs:
             torch-version: 1.7.1
             tensorflow-version: 2.2.0
             test-details:
-              - { dep: forte-wrapper, testfile: tests/fortex/health/processors/icd_coding_processor_test.py }
-              - { dep: forte-wrapper, testfile: tests/fortex/health/processors/negation_context_analysis_test.py }
-              - { dep: scispacy, testfile: tests/fortex/health/processors/scispacy_processor_test.py }
-              - { testfile: tests/fortex/health/readers/mimic3_note_reader_test.py }
+              { dep: forte-wrapper, testfile: tests/fortex/health/processors/icd_coding_processor_test.py }
+              { dep: forte-wrapper, testfile: tests/fortex/health/processors/negation_context_analysis_test.py }
+              { dep: scispacy, testfile: tests/fortex/health/processors/scispacy_processor_test.py }
+              { testfile: tests/fortex/health/readers/mimic3_note_reader_test.py }
           - python-version: 3.8
             torch-version: 1.8.1
             tensorflow-version: 2.2.0
             test-details:
-              - { dep: forte-wrapper, testfile: tests/fortex/health/processors/icd_coding_processor_test.py }
-              - { dep: forte-wrapper, testfile: tests/fortex/health/processors/negation_context_analysis_test.py }
-              - { dep: scispacy, testfile: tests/fortex/health/processors/scispacy_processor_test.py }
-              - { testfile: tests/fortex/health/readers/mimic3_note_reader_test.py }
+              { dep: forte-wrapper, testfile: tests/fortex/health/processors/icd_coding_processor_test.py }
+              { dep: forte-wrapper, testfile: tests/fortex/health/processors/negation_context_analysis_test.py }
+              { dep: scispacy, testfile: tests/fortex/health/processors/scispacy_processor_test.py }
+              { testfile: tests/fortex/health/readers/mimic3_note_reader_test.py }
           - python-version: 3.9
             torch-version: 1.7.1
             tensorflow-version: 2.5.0
             test-details:
-              - { dep: forte-wrapper, testfile: tests/fortex/health/processors/icd_coding_processor_test.py }
-              - { dep: forte-wrapper, testfile: tests/fortex/health/processors/negation_context_analysis_test.py }
-              - { dep: scispacy, testfile: tests/fortex/health/processors/scispacy_processor_test.py }
-              - { testfile: tests/fortex/health/readers/mimic3_note_reader_test.py }
+              { dep: forte-wrapper, testfile: tests/fortex/health/processors/icd_coding_processor_test.py }
+              { dep: forte-wrapper, testfile: tests/fortex/health/processors/negation_context_analysis_test.py }
+              { dep: scispacy, testfile: tests/fortex/health/processors/scispacy_processor_test.py }
+              { testfile: tests/fortex/health/readers/mimic3_note_reader_test.py }
           - python-version: 3.9
             torch-version: 1.7.11.8.1
             tensorflow-version: 2.5.0
             test-details:
-              - { dep: forte-wrapper, testfile: tests/fortex/health/processors/icd_coding_processor_test.py }
-              - { dep: forte-wrapper, testfile: tests/fortex/health/processors/negation_context_analysis_test.py }
-              - { dep: scispacy, testfile: tests/fortex/health/processors/scispacy_processor_test.py }
-              - { testfile: tests/fortex/health/readers/mimic3_note_reader_test.py }
+              { dep: forte-wrapper, testfile: tests/fortex/health/processors/icd_coding_processor_test.py }
+              { dep: forte-wrapper, testfile: tests/fortex/health/processors/negation_context_analysis_test.py }
+              { dep: scispacy, testfile: tests/fortex/health/processors/scispacy_processor_test.py }
+              { testfile: tests/fortex/health/readers/mimic3_note_reader_test.py }
     steps:
     - uses: actions/checkout@v2
 
