--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
           - { dep: scispacy, testfile: tests/fortex/health/processors/scispacy_processor_test.py }
           - { testfile: tests/fortex/health/readers/mimic3_note_reader_test.py }
         exclude:
+          - python-version: [ 3.6, 3.7 ]
+            torch-version: [ 1.7.1, 1.8.1 ]
+            tensorflow-version: [ 2.2.0, 2.5.0 ]
           - python-version: [ 3.8, 3.9 ]
             torch-version: [ 1.5.0, 1.6.0 ]
             tensorflow-version: [ 1.15.0 ]
