--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -163,6 +163,8 @@ jobs:
         run: |
           python -m pip install --progress-bar off --upgrade pip
           sudo apt-get install pandoc
+          pip install --progress-bar off -r requirements.txt
+          pip install --progress-bar off -r docs/requirements.txt
           pip install --progress-bar off .
 
       - name: Build Docs
