--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,20 +26,12 @@ jobs:
         exclude:
           - python-version: 3.6
             torch-version: 1.7.1
-            test-details:
-              - { dep: scispacy, testfile: tests/fortex/health/processors/temporal_mention_normalizing_processor_test.py }
           - python-version: 3.6
             torch-version: 1.8.1
-            test-details:
-              - { dep: scispacy, testfile: tests/fortex/health/processors/temporal_mention_normalizing_processor_test.py }
           - python-version: 3.6
             tensorflow-version: 2.2.0
-            test-details:
-              - { dep: scispacy, testfile: tests/fortex/health/processors/temporal_mention_normalizing_processor_test.py }
           - python-version: 3.6
             tensorflow-version: 2.5.0
-            test-details:
-              - { dep: scispacy, testfile: tests/fortex/health/processors/temporal_mention_normalizing_processor_test.py }
           - python-version: 3.7
             torch-version: 1.7.1
           - python-version: 3.7
@@ -64,6 +56,10 @@ jobs:
             tensorflow-version: 1.15.0
           - python-version: 3.9
             tensorflow-version: 2.2.0
+          - python-version: 3.6
+            test-details:
+              - { dep: scispacy, testfile: tests/fortex/health/processors/temporal_mention_normalizing_processor_test.py }
+
     steps:
     - uses: actions/checkout@v2
 
