--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
         sudo apt-get install -y libsndfile1-dev
         python -m pip install --progress-bar off --upgrade pip
         pip install --progress-bar off Django django-guardian
-        pip install --progress-bar off pylint==2.10.2 flake8==3.9.2 importlib-metadata==4.8.3 mypy==0.931 pytest==5.1.3 black==20.8b1 click==8.0.1
+        pip install --progress-bar off pylint==2.10.2 flake8==3.9.2 importlib-metadata<=5.0.0 mypy==0.931 pytest==5.1.3 black==20.8b1 click==8.0.1
         pip install --progress-bar off types-PyYAML==5.4.8 types-typed-ast==1.4.4 types-requests==2.25.6 types-dataclasses==0.1.7
         pip install --progress-bar off coverage codecov
 
@@ -106,7 +106,7 @@ jobs:
 
     - name: Install requirements for tests
       run: |
-        pip install --use-feature=fast-deps --progress-bar off .[test]
+        pip install --use-feature=2020-resolver --progress-bar off .[test]
 
     - name: Install Forte-wrappers-spacy
       if: ${{ matrix.test-details.dep == 'forte-wrapper' ||
@@ -120,7 +120,7 @@ jobs:
       if: ${{ matrix.test-details.dep == 'scispacy' ||
               contains(matrix.test-details.dep, 'scispacy') }}
       run: |        
-        pip install --use-feature=fast-deps --progress-bar off .[scispacy_processor]
+        pip install --use-feature=2020-resolver --progress-bar off .[scispacy_processor]
 
     - name: Test with pytest and run coverage
       run: |
