--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,7 +106,7 @@ jobs:
 
     - name: Install requirements for tests
       run: |
-        pip install --use-feature=2020-resolver --progress-bar off .[test]
+        pip install --progress-bar off .[test]
 
     - name: Install Forte-wrappers-spacy
       if: ${{ matrix.test-details.dep == 'forte-wrapper' ||
