add test to workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
           - { dep: forte-wrapper, testfile: tests/fortex/health/processors/negation_context_analysis_test.py }
           - { dep: scispacy, testfile: tests/fortex/health/processors/scispacy_processor_test.py }
           - { testfile: tests/fortex/health/readers/mimic3_note_reader_test.py }
+          - { testfile: tests/fortex/health/readers/xray_image_reader_test.py }
+          - { testfile: tests/fortex/health/processors/xray_processor_test.py }
         exclude:
           - python-version: 3.6
             torch-version: 1.7.1
