--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -125,13 +125,13 @@ jobs:
       if: ${{ matrix.test-details.dep == 'scispacy' ||
               contains(matrix.test-details.dep, 'scispacy') }}
       run: |        
-        pip install --use-feature=2020-resolver --progress-bar off .[scispacy_processor]
+        pip install --progress-bar off .[scispacy_processor]
 
     - name: Install temporal processor dependencies
       if: ${{ matrix.test-details.dep == 'normalizer' ||
               contains(matrix.test-details.dep, 'normalizer') }}
       run: |        
-        pip install --use-feature=2020-resolver --progress-bar off .[normalizer_processor]
+        pip install --progress-bar off .[normalizer_processor]
 
     - name: Test with pytest and run coverage
       run: |
