--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ 3.6, 3.7, 3.8, 3.9 ]
+        python-version: [ 3.7, 3.8, 3.9 ]
         torch-version: [ 1.5.0, 1.6.0, 1.7.1, 1.8.1 ]
         tensorflow-version: [ 1.15.0, 2.2.0, 2.5.0 ]
         test-details:
