--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           - { testfile: tests/fortex/health/readers/mimic3_note_reader_test.py }
           - { testfile: tests/fortex/health/readers/xray_image_reader_test.py }
           - { testfile: tests/fortex/health/processors/xray_processor_test.py }
-          - { dep: tagger_normalizer, testfile: tests/fortex/health/processors/temporal_mention_normalizing_processor_test.py }
+          - { dep: [ forte-wrapper, tagger_normalizer ], testfile: tests/fortex/health/processors/temporal_mention_normalizing_processor_test.py }
           - { dep: tagger_normalizer, testfile: tests/fortex/health/processors/temporal_mention_tagging_processor_test.py } 
         exclude:
           - python-version: 3.6
@@ -59,7 +59,7 @@ jobs:
           - python-version: 3.9
             tensorflow-version: 2.2.0
           - python-version: 3.6
-            test-details: { dep: tagger_normalizer, testfile: tests/fortex/health/processors/temporal_mention_normalizing_processor_test.py }
+            test-details: { dep: [ forte-wrapper, tagger_normalizer ], testfile: tests/fortex/health/processors/temporal_mention_normalizing_processor_test.py }
 
     steps:
     - uses: actions/checkout@v2
